--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "qi-ancestral-mtc",
   "private": true,
@@ -18,6 +17,7 @@
     "three": "^0.182.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/three": "^0.182.0",
@@ -25,7 +25,9 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "terser": "^5.44.1",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vite-plugin-singlefile": "^2.3.0"
   }
 }
